# Blood-Bank-System-using-C-

./: CMakeLists.txt  README.md  main.cpp
data/: donors.txt
managers/: BloodInventory.cpp  BloodInventory.h  DonorManager.cpp  DonorManager.h  RequestManager.cpp  RequestManager.h
models/: BloodUnit.cpp  BloodUnit.h  Donor.cpp  Donor.h  Request.cpp  Request.h
ui/: Menu.cpp  Menu.h
utils/: DateUtils.cpp  DateUtils.h  FileHandler.cpp  FileHandler.h  Validator.cpp  Validator.h
